# tenhou-scores-cli

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  test.yml
tenhou_scores/: __init__.py  config.py  exceptions.py  main.py  models.py  printers.py  tenhou_scores.py
tests/: test_main.py  test_models.py  test_printers.py  test_tenhou_scores.py
