[metadata]
name = tenhou-scores-cli
version = 0.1.0

[options]
packages = tenhou_scores
install_requires =
    click
    requests
    pydantic
    importlib-metadata; python_version <= "3.10"

[options.entry_points]
console_scripts =
    tenhou-scores = tenhou_scores.__main__:main

[flake8]
max-line-length = 119
